Extract the seeker and restructure events.